--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p><b>Bacharel em Ciência da Computação</b><br>(Universidade Federal de Pernambuco)</p>
                     <a href="http://lattes.cnpq.br/2825730035004500">Lattes</a><br>
                     <a href="files/curriculo.pdf">CV</a><br>
-                    <a href="mailto:lhds@cin.ufpe.br">lhds@cin.ufpe.br</a>
+                    <a href="mailto:luishdelgados10@gmail.com">luishdelgados10@gmail.com</a>
                 </div>
                 <div class="col-sm-6">
                     <h1 align="center">Resumo</h1>
