--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                         <a href="https://www.linkedin.com/in/luís-henrique-delgado-santos-29ab68a7"><img src="images/imgresIn.png"></a>
                         <a href="https://wa.me/558192741320"><img src="images/whatsapp.png"></a>
                         <a href="https://www.twitter.com/carequinha10"><img src="images/twitter.png"></a>
+                        <a href="https://letterboxd.com/luisdelgado/"><img src="images/letterboxd.jpg"></a>
                         <a href="https://github.com/luisdelgado"><img src="images/GitHub-Mark.png"></a>
                     </p>
             </div>
