Atualizando últimos trabalhos

--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
             <div class="container">
                 <div id="works" class="row" align="center">
                     <div class="col-sm-6 miniimg text-center">
-                    <a href="https://biciflow.com"><img class="img-fluid img-thumbnail miniimg" src="images/biciflow.jpeg" alt="Biciflow"></a>
+                    <a href="https://biciflow.com"><img class="img-fluid img-thumbnail miniimg" src="images/biciflow.png" alt="Biciflow"></a>
                     </div>
                     <div class="col-sm-6 miniimg text-center">
-                    <a href="https://drive.google.com/drive/folders/0BxZ55toyE2dlOEpTLXZQS3BBSzg"><img class="img-fluid img-thumbnail miniimg" src="images/polyedron.jpeg" alt="Polyedron"></a>
+                    <a href="https://navegue.github.io/"><img class="img-fluid img-thumbnail miniimg" src="images/navegue.png" alt="Polyedron"></a>
                     </div>
                 </div>
                 <div id="works" class="row">
                     <div class="col-sm-6 miniimg text-center">
-                    <a href="https://play.google.com/store/apps/details?id=br.com.ufpe.busrate"><img class="img-fluid img-thumbnail miniimg" src="images/busRate.png" alt="BusRate"></a>
+                    <a href="https://www.mapeamento40.com.br/#/home"><img class="img-fluid img-thumbnail miniimg" src="images/mapa40.png" alt="Mapa40"></a>
                     </div>
                     <div class="col-sm-6 miniimg text-center">
-                    <a href="http://co2energia.blogspot.com/"><img class="img-fluid img-thumbnail miniimg" src="images/co2energiaBlog.png" alt="Blog CO2Energia"></a>
+                    <a href="https://www.facebook.com/ISITICs/photos/a.993384530702456/3028893880484834/?type=3&theater"><img class="img-fluid img-thumbnail miniimg" src="images/chopeira40.jpg" alt="Blog CO2Energia"></a>
                     </div>
                 </div>
 
                 <div class="col-sm-12 text-center">
+                    <a href="https://drive.google.com/drive/folders/0BxZ55toyE2dlOEpTLXZQS3BBSzg">Polyedron</a><br>
+                    <a href="https://play.google.com/store/apps/details?id=br.com.ufpe.busrate">BusRate</a><br>
+                    <a href="http://co2energia.blogspot.com/">CO2Energia Blog</a><br>
                     <a href="https://m4nuela22.github.io/projetoVisualizacao/index.html">Acidentes de Trânsito no Recife</a><br>
                     <a href="http://www.co2energia.com.br/">CO2Energia</a><br>
-                    <a href="files/tg">Relevância Prática de Fatores que Contribuem para Conflito de Merge</a><br>
-                    <a href="files/saude">Saúde 10 anos no futuro</a><br>
-                    <a href="https://github.com/luisdelgado/Coleta-e-Busca-de-Entidades-Estruturadas-em-um-Dominio">Coleta e Busca de Entidades Estruturadas em um Dominio</a><br>
-                    <a href="files/ESports">ESports</a><br>
+                    <a href="files/tg.pdf">Relevância Prática de Fatores que Contribuem para Conflito de Merge</a><br>
                 </div>
             </div>
 
