Resolvendo bugs para versão mobile

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a href="https://www.16personalities.com/articles/roles-sentinels">Função: Sentinela</a><br>
                         <a href="https://www.16personalities.com/articles/strategies-people-mastery">Estratégia: Mestre de Pessoas</a>
                     </div>
-                    <div class="col-sm-8 text-center">
+                    <div class="col-sm-8 large-characteristics text-center">
                         <div class="row">
                             <div class="col-sm-4 text-center">
                                 <p>Extrovertido</p>
@@ -116,6 +116,23 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-sm-8 mobile-characteristics text-center">
+                        <div>
+                            <p><span class="max-percent">Extrovertido  56</span> | 44 Introvertido</p>
+                        </div>
+                        <div>
+                            <p>Intuitivo 46 | <span class="max-percent">54 Observador</span></p>
+                        </div>
+                        <div>
+                            <p>Pensamento 36 | <span class="max-percent">64</span> Observador</p>
+                        </div>
+                        <div>
+                            <p><span class="max-percent">Organizado 72</span> | 28 Flexível</p>
+                        </div>
+                        <div>
+                            <p><span class="max-percent">Confiante 51</span> | 49 Consciente</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -124,12 +141,18 @@
                 <h1>Principais Habilidades</h1>
             </div>
             <div id="skills" class="container">
-                <div class="row maxFont">
+                <div class="row large-skills maxFont">
                     <div class="col-sm-6 text-center">
                         <p>Java<br>Desenvolvimento de Software<br>Gestão de Projeto<br>Escrita Criativa<br>HTML</p>
                     </div>
                     <div class="col-sm-6 text-center">
                         <p>Capacidade de Organização<br>Eclipse<br>Scrum<br>JavaScript<br>Spring Framework</p>
+                    </div>
+                </div>
+                <div class="row mobile-skills maxFont">
+                    <div class="col-sm-6 text-center">
+                        <p>Java<br>Desenvolvimento de Software<br>Gestão de Projeto<br>Escrita Criativa<br>HTML<br>
+                            Capacidade de Organização<br>Eclipse<br>Scrum<br>JavaScript<br>Spring Framework</p>
                     </div>
                 </div>
             </div>
@@ -171,13 +194,13 @@
                 <div class="col-sm-6 text-center">
                     <h1>Livros</h1>
                     <p>Um relato escrito, é um relato jamais esquecido. Assim nasce a história.<br></p>
-                    <a href="http://cin.ufpe.br/~lhds/files/AsCronicasDeBill">As Crônicas de Bill, o bardo</a>
+                    <a href="files/AsCronicasDeBill.pdf">As Crônicas de Bill, o bardo</a>
                 </div>
                 <div class="col-sm-6 text-center">
                     <h1>Blog</h1>
                     <p>Todo homem é artista. Alguns se esquecem por se prenderem a níveis elevados de realidade. O que eles não sabem é que no limite da realidade só há arte.
                         Esse blog é uma moradia da arte. Aqui a arte circula livre para ser sentida.<br></p>
-                    <a href="http://www.umnovodiaparaviver.tumblr.com/">Vivendo o Tempo</a>
+                    <a href="https://umnovodiaparaviver.tumblr.com/">Vivendo o Tempo</a>
                 </div>
             </div>
 
