Adicionando característica emoção na versão mobile

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             <p>Intuitivo 46 | <span class="max-percent">54 Observador</span></p>
                         </div>
                         <div>
-                            <p>Pensamento 36 | <span class="max-percent">64</span> Observador</p>
+                            <p>Pensamento 36 | <span class="max-percent">64 Emoção</span></p>
                         </div>
                         <div>
                             <p><span class="max-percent">Organizado 72</span> | 28 Flexível</p>
