--- a/index.html
+++ b/index.html
@@ -215,8 +215,10 @@
                         <a href="https://www.linkedin.com/in/luís-henrique-delgado-santos-29ab68a7"><img src="images/imgresIn.png"></a>
                         <a href="https://wa.me/558192741320"><img src="images/whatsapp.png"></a>
                         <a href="https://www.twitter.com/carequinha10"><img src="images/twitter.png"></a>
-                        <a href="https://letterboxd.com/luisdelgado/"><img src="images/letterboxd.jpg"></a>
                         <a href="https://github.com/luisdelgado"><img src="images/GitHub-Mark.png"></a>
+                        <a href="https://letterboxd.com/luisdelgado/"><img src="images/letterboxd.jpg"></a>
+                        <a href="https://open.spotify.com/user/luisdelgados7"><img src="images/spotify.jpg"></a>
+                        <a href="https://tiktok.com/@carequinha9"><img class="background-image" src="images/tiktok.png"></a>
                     </p>
             </div>
         </div>
