--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Luís Delgado">
     <meta name="description" content="Site pessoal de Luís Delgado.">
+    <meta name="keywords" content="site, pessoal, dev, luisdelgado, artista">
     <meta http-equiv="Content-Type" content="text/html">
     <meta name="viewport" content="width=device-width, maximum-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
