Melhorando tradução de Personalidade

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <div class="row">
                     <div class="col text-center">
                         <img src="images/personality.svg"><br>
-                        <br><a href="https://www.16personalities.com/esfj-personality">Tipo: O Cônsul</a><br>
-                        <a href="https://www.16personalities.com/articles/roles-sentinels">Função: Sentinela</a><br>
-                        <a href="https://www.16personalities.com/articles/strategies-people-mastery">Estratégia: Mestre de Pessoas</a>
+                        <br><a href="https://www.16personalities.com/br/personalidade-esfj">Personalidade: Cônsul</a><br>
+                        <a href="https://www.16personalities.com/articles/roles-sentinels">Papel: Sentinela</a><br>
+                        <a href="https://www.16personalities.com/articles/strategies-people-mastery">Estratégia: Domínio em Pessoas</a>
                     </div>
                     <div class="col-sm-8 large-characteristics text-center">
                         <div class="row">
