--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <img src="images/personality.svg"><br>
                         <br><a href="https://www.16personalities.com/br/personalidade-esfj">Personalidade: Cônsul</a><br>
                         <a href="https://www.16personalities.com/articles/roles-sentinels">Papel: Sentinela</a><br>
-                        <a href="https://www.16personalities.com/articles/strategies-people-mastery">Estratégia: Domínio em Pessoas</a>
+                        <a href="https://www.16personalities.com/articles/strategies-people-mastery">Estratégia: Líder com Pessoas</a>
                     </div>
                     <div class="col-sm-8 large-characteristics text-center">
                         <div class="row">
