Migrando Contato para Redes

--- a/index.html
+++ b/index.html
@@ -207,17 +207,17 @@
 
             <!--Contato-->
             <div class="col-sm-12 text-center">
-                <h1>Contato</h1>
+                <h1>Redes</h1>
             </div>    
             <div class="row">
-                    <div id="contact" class="col-sm-12 text-center">
+                    <div id="media" class="col-sm-12 text-center">
                         <br><a href="https://www.facebook.com/luis.delgado.5209000"><img src="images/imgresFace.png"></a>
                         <a href="https://www.instagram.com/luisdelgado7/"><img src="images/instagram.png"></a>
                         <a href="https://www.linkedin.com/in/luís-henrique-delgado-santos-29ab68a7"><img src="images/imgresIn.png"></a>
                         <a href="https://www.twitter.com/carequinha10"><img src="images/twitter.png"></a>
                         <a href="https://github.com/luisdelgado"><img src="images/GitHub-Mark.png"></a>
                         <a href="https://letterboxd.com/luisdelgado/"><img src="images/letterboxd.jpg"></a>
-                        <a href="https://tiktok.com/@carequinha9"><img class="background-image" src="images/tiktok.png"></a>
+                        <a href="https://tiktok.com/@luisdelgados7"><img class="background-image" src="images/tiktok.png"></a>
                         <a href="https://open.spotify.com/user/luisdelgados7"><img src="images/spotify.jpg"></a>
                     </p>
             </div>
