--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div id="works" class="row">
                     <div class="col-sm-6 miniimg text-center">
-                    <a href="https://www.mapeamento40.com.br/#/home"><img class="img-fluid img-thumbnail miniimg" src="images/mapa40.png" alt="Mapa40"></a>
+                    <a href="https://mapeamento40.mctic.gov.br/"><img class="img-fluid img-thumbnail miniimg" src="images/mapa40.png" alt="Mapa40"></a>
                     </div>
                     <div class="col-sm-6 miniimg text-center">
                     <a href="https://www.facebook.com/ISITICs/photos/a.993384530702456/3028893880484834/?type=3&theater"><img class="img-fluid img-thumbnail miniimg" src="images/chopeira40.jpg" alt="Blog CO2Energia"></a>
