--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <h1 align="center">Resumo</h1>
                     <p>É Desenvolvedor de Inovação e Tecnologia no Instituto SENAI de Inovação para TICs (ISI-TICs). Foi Monitor de Engenharia de Software e Sistemas
                         no Centro de Informática (CIn) da Universidade Federal de Pernambuco (UFPE) e Estagiário no ISI-TICs, onde desempenhou atividades de engenharia de software bem
-                        como o desenvolvimento <i>full-stack</i> de sistemas voltados para a Indústria 4.0 em âmbito nacional e regional. Além disso, tem experiência na área de
-                        gestão de negócios e inovação provinda de duas <i>startups</i>: Biciflow (Cofundador & COO) e Navegue (Cofundador & Desenvolvedor).</p>
+                        como o desenvolvimento <i>full-stack</i> de sistemas voltados para a Indústria 4.0 em âmbito nacional e regional. Além disso, tem experiência na área de 
+                        design, gestão de negócios e inovação provinda de duas <i>startups</i>: Biciflow (Cofundador & COO) e Navegue (Cofundador & Desenvolvedor).</p>
                 </div>
             </div>
 
