Atualizando site da Navegue

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <a href="https://biciflow.com"><img class="img-fluid img-thumbnail miniimg" src="images/biciflow.png" alt="Biciflow"></a>
                     </div>
                     <div class="col-sm-6 miniimg text-center">
-                    <a href="https://navegue.github.io/"><img class="img-fluid img-thumbnail miniimg" src="images/navegue.png" alt="Navegue"></a>
+                    <a href="https://navegue.app"><img class="img-fluid img-thumbnail miniimg" src="images/navegue.png" alt="Navegue"></a>
                     </div>
                 </div>
                 <div id="works" class="row">
