--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                         <a href="https://www.twitter.com/carequinha10"><img src="images/twitter.png"></a>
                         <a href="https://github.com/luisdelgado"><img src="images/GitHub-Mark.png"></a>
                         <a href="https://letterboxd.com/luisdelgado/"><img src="images/letterboxd.jpg"></a>
+                        <a href="https://www.behance.net/luishdelgado"><img src="images/behance.jpg"></a>
                     </p>
             </div>
         </div>
