Melhorando experiência acadêmica

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div id="profile" class="col-sm-6 text-center">
                     <img src="images/luisDelgado.jpg"><br><br>
                     <h1>Luís Delgado</h1>
-                    <p><b>Bacharel em Ciência da Computação</b><br>(Universidade Federal de Pernambuco)</p>
+                    <p><b>Graduado em Ciência da Computação</b><br>(Universidade Federal de Pernambuco)</p>
                     <p><b>Pós-graduando em Design de Interação<br>para Artefatos Digitais</b><br>(CESAR School)</p>
                     <a href="http://lattes.cnpq.br/2825730035004500">Lattes</a><br>
                     <a href="files/curriculo.pdf">CV</a><br>
